--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vincenttoon/jest-another-RPG.git"
   },
-  "author": "",
+  "author": "Vincent Toon",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Vincenttoon/jest-another-RPG/issues"
